--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -62,7 +62,7 @@ teasel_matrix                                          # print the matrix
 
 #### Stage-structure vs age-structure
 
-In the previous lecture, we talked about 'age-structured populations'. What we meant by that is that the population vital rates (e.g., $b$ and $d$) varied by age. 
+In the previous module, we talked about 'age-structured populations'. What we meant by that is that the population vital rates (e.g., $b$ and $d$) varied by age. 
 
 Sometimes, it's convenient to classify individuals within a certain age range as belonging to a particular life-history stage. For example, we might classify the life history of a grizzly bear like this:
 
@@ -87,13 +87,15 @@ By using stages, we have simplified our model from having 100 stocks (with even 
 
 Matrix population models can represent age-structured and stage-structured models with equal simplicity and elegance. 
 
-The term 'Leslie Matrix' refers to an age-structured matrix population model. When a matrix is used to represent a stage-structured population, it is often called a 'Lefkovitch" Matrix. 
+The term 'Leslie Matrix' refers to an age-structured matrix population model. 
+
+When a matrix is used to represent a stage-structured population, it is often called a 'Lefkovitch" Matrix. 
 
 ### Reason 2: modeling age-structured population dynamics!
 
-In one of the questions in Lab 3, your were asked to use a life table to predict the number of births in a population one time step in the future. As you probably realized, this is not as straightforward as it sounds!
+In one of the questions in Lab 3, you were asked to use a life table to predict the number of births in a population one time step into the future. As you probably realized, this is not as straightforward as it sounds!
 
-Life tables are great for summarizing survivorship schedules and other aspects of age-structured populations. But life tables are not designed to model age-structured abundance dynamics!
+Life tables are great for summarizing survivorship schedules and other aspects of age-structured populations. But life tables are not designed to model the abundance dynamics of age- or stage- structured populations! 
 
 You know what *is* great for projecting age-structured abundance into the future? 
 
@@ -116,7 +118,8 @@ Initial_teasel
 
 Then all we need to do is 'matrix-multiply' this **vector** of abundances by the **transition matrix** from above! Each time we do this multiplication step, we advance one year! It's that easy!
 
-NOTE: matrix multiplication (percent-asterisk-percent in R) is not the same as standard multiplication (asterisk in R). We will go over this in the intro to lab 4 a bit later.  
+NOTE: matrix multiplication (percent-asterisk-percent in R) is not the same as standard multiplication (asterisk in R).
+
 Here's how we can do this in R!
 
 ```{r}
@@ -128,7 +131,7 @@ Year1
   
 ```
 
-How easy is that?!
+Pretty simple!
 
 To compute teasel abundance in year 2 of our simulation, we can simply repeat:
 
@@ -186,6 +189,13 @@ So projection is easy with matrices! What more reason do we need to convince our
 
 ### Reason 3: Matrix algebra 'tricks'!
 
+Fortunately, we can compute two key population properties from the transition matrix using some mathematical tricks: 
+
+1. We can compute **Lambda** from the transition matrix in one step
+2. We can compute **Stable Stage Distribution (SSD) from the transition matrix in one step
+
+#### Lambda
+  
 There is a clear similarity between the finite population growth equation:
 
 $N_{t+1}=\lambda \cdot N_t$,
@@ -198,33 +208,23 @@ $\mathbf{N}_{t+1} = \mathbf{A} \cdot \mathbf{N}_{t}$,
 
 where $\mathbf{N}$ is a **vector** of abundances (abundance for all stages), and $\mathbf{A}$ is the **transition matrix**, which we have seen before.
 
-**Q:** Can you see the similarity between these two equations? 
-
-Both equations describe simple exponential growth or decline!
-
-**Q:** Can you see the difference between these two equations?
+Both equations describe discrete exponential growth or decline!
 
 Note that $N$ in the first equation is a **scalar** -- that is, it is just a 'naked' number. 
 
-WHEREAS,
+In contrast:
 
-$\mathbf{N}$ in the second equation represents an age-structured **vector**: a set of abundances structured by age or stage class.
+$\mathbf{N}$ in the second equation represents an age-structured **vector (a bundle of numbers organized in a single line)**: a set of abundances structured by age or stage class.
 
 Similarly, the finite population growth rate, $\lambda$ is a scalar,
 
-WHEREAS,
+In fact, the concept of **Lambda**, or the multiplier used to model discrete population growth, applies to matrix population models as well!
 
-$\mathbf{A}$ is a **matrix** (the transition matrix)   
+Recall that when a population is at *stable stage distribution (SSD)*, it grows in a discrete exponential growth pattern- this rate of exponential growth can be described by a single parameter -- **Lambda**!  
 
-#### What about those tricks??
-
-Okay one of the tricks is this:
+$\mathbf{A}$ is a **matrix (a bundle of numbers organized in rows and columns)** known as the transition matrix in Population Ecology.   
 
 In one step, you can compute $\lambda$ from $\mathbf{A}$!!     
-
-All you need to do is obtain the _dominant **eigenvalue** of $\mathbf{A}$_! This number is the finite rate of growth, $\lambda$, for an age or stage-structured population.
-
-Recall that when a population is at stable age distribution, it grows in a discrete exponential growth pattern- this rate of exponential growth can be described by a single parameter -- Lambda!  
 
 Let's do this in R!
 
@@ -246,10 +246,11 @@ Lambda
 
 You don't have to understand the math here- but I do want you to understand how simple that was- just one line of code and we computed the annual rate of growth from the teasel transition matrix!
 
+#### Stable Stage Distribution (SSD)
+
 Here's another trick:
 
-In one step, you can compute **stable age distribution (S.A.D)** from $\mathbf{A}$!!     
-All you need to do is obtain the _right-hand eigenvector of $\mathbf{A}$_! This vector represents the _relative abundances in each age class at the stable age distribution_. 
+In one step, you can compute **stable stage distribution (SSD)** from $\mathbf{A}$!!     
 
 Let's do this in R!
 
@@ -269,6 +270,8 @@ SAD      # stable age distribution as a percentage of the total population
 
 ```
 
+This vector represents the _relative abundances in each age class at the stable age distribution_!
+
 **Q:** Does a stage-structured population grow at the rate of $\lambda$ per time step if it is NOT at stable age distribution? [PointSolutions]   
 
 To answer this question, you may find it helps to load an stage-structured model in InsightMaker like [this one](https://insightmaker.com/insight/6vZsNuzGIbisYsFVCSLWZK/Stage-structured-population). 
@@ -278,6 +281,7 @@ To answer this question, you may find it helps to load an stage-structured model
 Let's take a look at a basic stage-structured population -- specifically [this one](https://insightmaker.com/insight/6vZsNuzGIbisYsFVCSLWZK/Stage-structured-population) - we used this model for running the 'supplementation' example in the 'age structured populations' lecture. In InsightMaker it looks something like this:
 
 ![](IM9.jpg)
+
 Let's convert the vital rates to a three-stage **projection matrix**. Projection matrices are **square matrices** where the number of rows and columns are equal to the number of life stages. In this case, that means three! Let's make a blank matrix for now:
 
 ```{r}
@@ -301,7 +305,9 @@ You can read the **elements** of a transition matrix as follows:
 
 NOTE: the top row in the transition matrix represents **fecundities (f)**. These elements are best interpreted as follows:
 
-"The per-capita production of newborns next year by _(col name)_ this year is _(value of element)_". These matrix elements account for both survival (surviving to the next year) and birth rate (birth rate one year from now). In life table terms:
+"The per-capita production of newborns next year by _(col name)_ in the population this year is _(value of element)_".
+
+These matrix elements account for both survival (surviving to the next year) and birth rate (birth rate one year from now). In life table terms:
 
 $f_t = g(t) * b(t+1)$
 
@@ -409,12 +415,13 @@ Which vital rates are density-dependent? All? Some? It depends? Are the data ava
 
 How do you incorporate density-dependence into a matrix population model?  
 
-How do you incorporate predator-prey dynamics into a matrix population model? [cue brain explosion]     
-ANSWER: use computer programming (e.g., InsightMaker!) 
+How do you incorporate predator-prey dynamics into a matrix population model?      
+
+ANSWER: use computer programming (e.g., R or InsightMaker!) 
 
 ### Overview of matrix multiplication
 
-(we will do this on the whiteboard during lab!)
+(we will do this on the whiteboard!)
 
 ### In-class exercise: loggerhead conservation!
 
@@ -436,7 +443,7 @@ Using your Excel spreadsheet, investigate four management scenarios for the logg
     
 ![turtle excluder device](ted1.jpg)    
 
-**Poinsolutions**: Which of the four management recommendations would have the greatest positive effect on this population?
+**PointSolutions**: Which of the four management recommendations would have the greatest positive effect on this population?
 
 ### translate life history description into matrix population model
 
