--- a/LECTURE8.Rmd
+++ b/LECTURE8.Rmd
@@ -29,8 +29,9 @@ To download the R script for this lecture, click [here](LECTURE8.R)
 
 **what** The exam will cover:
 
-- All material in Chapters 1-3 of the Gotelli book *including matrix population modeling concepts*.   
-- All material covered in lectures, including the following web pages:           
+- Chapters 1-3 of the Gotelli book *including matrix population modeling concepts*. Note that any material in the Gotelli book that we did NOT cover in class will NOT be on the exam. 
+
+- All material covered in lectures, including the following webpages:           
     * [Systems thinking and modeling](LECTURE1.html)
     * [Exponential growth](LECTURE2.html)
     * [Malthus and limits to growth](LECTURE3.html)
@@ -51,7 +52,7 @@ To download the R script for this lecture, click [here](LECTURE8.R)
 
 *The exam will consist of a mixture of multiple-choice and short-answer questions*      
 
-*Please bring a calculator- a regular scientific calculator will work fine*
+*Please bring a calculator- a regular scientific calculator will work fine* [NOTE: it's not absolutely necessary to bring a calculator, but it can help for 1 or 2 of the questions]
 
 We will hold a review session for the exam during our regular class meeting on the Monday prior to the exam (Monday, March 11). Please make note of any questions that come up as you study- we can talk these over during the review session!
 
@@ -69,25 +70,29 @@ There are two major reasons we can be uncertain. Either we _lack sufficient know
 
 - **You lack sufficient knowledge**. This is also known variously as *sampling uncertainty*, parameter uncertainty, structural uncertainty, and more. *In practical terms: if you collected more data you could (in principle) make a better model that more closely represents reality.*
 
-- **The system is inherently variable and unpredictable**. In population ecology and systems modeling, this is also known as **stochasticity**. *In practical terms: no matter how much we study and understand a natural system, we can not predict the future with certainty*. Ecological systems are inherently variable and unpredictable. We can't know with certainty whether or not an individual will mate, or die. We can't really even be certain whether the environmental conditions (e.g., weather) will be favorable or unfavorable for offspring production or mortality! 
+- **The system is inherently variable and unpredictable**. In population ecology this is also known as **demographic stochasticity** and **environmental stochasticity**. *In practical terms: no matter how much we study and understand a natural system, we can not predict the future with certainty*.
+
+Ecological systems are inherently variable and unpredictable. We can't know with certainty whether or not an individual will mate, or die. We can't really even be certain whether the environmental conditions (e.g., moisture availability, food availability) will be favorable or unfavorable for offspring production or survival! 
 
 ## How to deal with uncertainty
 As applied population ecologists, we must **embrace uncertainty**. we have two major tools to help us manage and account for uncertainty in our study systems: _uncertainty analysis_ and _stochastic models_
 
 ### Uncertainty analysis
 
-What if we simply don't have enough data to build a perfect model? This is an example of *lacking sufficient knowledge*. In this case, the tool we use is called **uncertainty analysis**. Basically, we try the "worst case" and "best case" values for a parameter (usually a per-capita vital rate- often modeled as [Variables] in InsightMaker) we are uncertain about (e.g., adult survival rate could be 0.6 or 0.7) and see what happens to our study system (e.g., given the uncertainty we have about the true parameter value, is it plausible that the population will go extinct? Is it plausible that it will decline?). 
+What if we simply don't have enough data to build a perfect model? This is an example of *lacking sufficient knowledge*. In this case, the tool we use is called **uncertainty analysis**. Basically, we try the "worst case" and "best case" values for a parameter (usually a per-capita vital rate- often modeled as [Variables] in InsightMaker) we are uncertain about (e.g., adult survival rate could be 0.6 or 0.7) and see what happens to our study system (e.g., given the uncertainty we have about the true parameter value, is it plausible that the population will go extinct? Is it plausible that it will decline?). In this class, we refer to this as the "best-case/worst-case" method.
 
 ### Stochastic models (demographic and environmental stochasticity)
 
-1. Second, we usually can't predict whether an individual will live or die, breed or not breed, etc. All we can know is the *probability* of mating, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly which individuals live or die (whether an individual will "get lucky" so to speak!), who gives birth and who doesn't, and how many females are born, we _just can't know for sure_. This is an example of a system being inherently unpredictable. In population ecology, this is called **demographic stochasticity**. In this case, we **randomly vary total births and deaths** (the [Flows] in InsightMaker) to represent the inherent unpredictability of individual fates within a population.
+Here, we "embrace" the concept that populations are inherently variable and unpredictable.
 
-2. Third, we usually can't predict whether next year or the year after will be favorable or unfavorable for population growth- that is, whether the per-capita vital rates (e.g., $b$, or $d$ or $r$) will be more or less optimal at a future point in time (whether a _population_ will "get lucky", so to speak). This is another example of a system being *inherently unpredictable*. In population ecology this is called **environmental stochasticity**. In this case, we **randomly vary per-capita vital rates** (represented as [Variables] in InsightMaker) to represent the inherent unpredictability of environmental conditions. 
+1. We usually can't predict whether an individual will live or die, breed or not breed, etc. All we can know is the *probability* of mating, or the *probability* of dying, or the per-capita *rate* of offspring production, or the probability of a given offspring being female. But when it comes to projecting exactly which individuals live or die (whether an individual will be "lucky" so to speak!), who gives birth and who doesn't, and how many females are born, we _just can't know for sure_. This is an example of a system being inherently unpredictable. In population ecology, this is called **demographic stochasticity**. In this case, we **randomly vary total births and deaths** (the [Flows] in InsightMaker) to represent the inherent unpredictability of individual fates within a population.
+
+2. We usually can't predict whether next year or the year after will be favorable or unfavorable for population growth- that is, whether the per-capita vital rates (e.g., $b$, or $d$ or $r$) will be more or less optimal at a future point in time (whether a _population_ will be "lucky", so to speak). This is another example of a system being *inherently unpredictable*. In population ecology this is called **environmental stochasticity**. In this case, we **randomly vary per-capita vital rates** (represented as [Variables] in InsightMaker) to represent the inherent unpredictability of environmental conditions. 
 
 ![](dice1.png){width=15%}
 
 ## Random number generation
-To incorporate inherent unpredictability (randomness) into our models, we often include *stochastic* components so that each model run (replicate) -- or each year of each model run -- is different from one another (the results are variable). That is, we need to include at least one **random number generator** in our models! A random number generator is like a lottery ball machine! Each time we want a new number we reach in and pull another number out, record the number, put it back in and shake it up again.
+To incorporate inherent unpredictability (randomness) into our models, we often include *stochastic* components so that each model run (replicate) -- or each year of each model run -- is different from one another (the results are variable). That is, we need to include at least one **random number generator** in our models! A random number generator is like a lottery machine! Each time we want a new number we reach in and pull another number out, record the number, put it back in and shake it up again.
 
 ![](lottery1.png){width=20%}
 
@@ -114,7 +119,7 @@ A probability distribution can be pretty much anything you want it to be. Howeve
 ### Probability distributions
 
 ### Discrete vs. continuous
-In *discrete distributions*, each unique outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For practical purposes in this class, discrete distributions produce integers and are used to represent demographic stochasticity (variation in the total number of births and deaths even if per-capita vital rates don't change). For example, let's consider a *binomial distribution*  
+In *discrete distributions*, each unique outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For practical purposes in this class, discrete distributions produce *integers* and are used to represent demographic stochasticity (variation in the total number of births and deaths even if per-capita vital rates don't change). For example, let's consider a *binomial distribution*  
 
 ```{r}
 
@@ -140,7 +145,7 @@ Another discrete distribution we will use in this class is the *Poisson distribu
 # Poisson distribution
 
 xvals <- seq(0,10,1)
-probs <- dpois(xvals,lambda=2.2)     # POisson distribution
+probs <- dpois(xvals,lambda=2.2)     # Poisson distribution
 names(probs) <- xvals
                
 barplot(probs,ylab="Probability",xlab="Possibilities",main="Poisson distribution (discrete)")
@@ -227,7 +232,7 @@ rnorm(1,mean=3,sd=4.1)   # normal distribution is defined by "mean" and "sd" (st
 
 ```
 
-**PointSolutions** In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3
+**Top Hat** In R, generate one random number from a Binomial distribution with 10 trials and probability of success equal to 0.3
 
 In R, generate random numbers from a Poisson distribution with mean of 2.1
 
@@ -262,7 +267,7 @@ hist(hatch_perfem)
 
 ```
 
-**Q**: What type of uncertainty does this set of values most likely represent? What random number generator might you use to represent this uncertainty? [PointSolutions]
+**Q**: What type of uncertainty does this set of values most likely represent? What random number generator might you use to represent this uncertainty? [Top Hat]
 
 Now let's try to fit a distribution to these data! Let's use a Normal distribution. (NOTE: technically speaking we might want to use a distribution that can't produce negative numbers- like the log-normal distribution, but we will usually use the normal distribution in this class for simplicity)
 
@@ -301,8 +306,8 @@ fitdistr(hatch_perfem,"normal")
 
 1) Use trial-and-error to find appropriate "mean" and "sd" parameters for the normal distribution.
 
-**Q**: what is the best-fit value for "mean"?  [PointSolutions]               
-**Q**: what is the best-fit value for "sd"?  [PointSolutions]                        
+**Q**: what is the best-fit value for "mean"?  [Top Hat]               
+**Q**: what is the best-fit value for "sd"?  [Top Hat]                        
 
 2) Use your fitted distribution to predict the per-capita production of hatchlings for the next 5 years. To do this, use the "rnorm()" function in R.
 
@@ -320,7 +325,7 @@ You can clone this one if you'd like: [https://insightmaker.com/insight/2WNEa6ZT
 
 1. Set *Birth rate* equal to 0.4 and *Death rate* equal to 0.3. Set initial abundance to 10. Under the "Settings" menu, set the model to run for 10 years. Make sure your *Population* stock can not go negative (this is a setting in the configuration panel). Hit "Simulate"- you should see exponential growth! 
 
-2. **Parameter uncertainty:** What if we have imperfect knowledge about birth rate? The birth rate could be anything from 0.2 to 0.5. Run the model with the lowest and the highest possible birth rate. NOTE: you can give each results plot a title using the gear-shaped symbol at the top of your plot window- that way you can name your scenarios -- e.g., "min birth rate".
+2. **Parameter uncertainty:** What if we have imperfect knowledge about birth rate? The birth rate could be anything from 0.2 to 0.5. Run the model with the lowest and the highest possible birth rate. NOTE: you can give each results plot a title using the pencil-shaped symbol at the top of your plot window- that way you can name your scenarios -- e.g., "min birth rate".
 
 3. Now use the "Compare Results" tool (under the "Tools" menu in the upper right corner...) to visualize the range of possible population growth trajectories that would be possible given our *uncertainty* (lack of knowledge) about birth rate. 
 
@@ -340,7 +345,7 @@ RandBinomial([Population], [Death rate])
 
 In plain English: the number of deaths each year is a random quantity determined by "coin-flipping" (Binomial distribution is the "coin flip" distribution). The total deaths is computed by flipping a coin for each individual in the population and killing off all individuals that come out 'heads' (where the probability of coming up 'heads' is the death rate). 
 
-For the total births, $B$ we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because it produces whole numbers, can't go negative, AND it has no hard upper limit (unlike the binomial distribution). 
+For the total births, $B$ we will use the *Poisson* distribution. The Poisson distribution is often use to represent births, because it produces whole numbers, can't go negative, AND it has no hard upper limit (unlike the Binomial distribution). 
 
 NOTE: there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). This would not be possible with a binomial distribution! That is, you can't get more "heads" (deaths) than the total number of coin flips (individuals in the population). 
 
